--- a/sections/references.bib
+++ b/sections/references.bib
@@ -1,3 +1,177 @@
+@article{5392560, 
+author={A. L. Samuel}, 
+journal={IBM Journal of Research and Development}, 
+title={Some Studies in Machine Learning Using the Game of Checkers}, 
+year={1959}, 
+volume={3}, 
+number={3}, 
+pages={210-229}, 
+keywords={}, 
+doi={10.1147/rd.33.0210}, 
+ISSN={0018-8646}, 
+month={July},}
+
+@ARTICLE{kearnsli,
+    author = {Michael Kearns and Ming Li},
+    title = {Learning in the Presence of Malicious Errors},
+    journal = {SIAM Journal on Computing},
+    year = {1993},
+    volume = {22},
+    pages = {807--837}
+}
+
+@Article{Auer2002,
+author="Auer, Peter
+and Cesa-Bianchi, Nicol{\`o}
+and Fischer, Paul",
+title="Finite-time Analysis of the Multiarmed Bandit Problem",
+journal="Machine Learning",
+year="2002",
+month="May",
+day="01",
+volume="47",
+number="2",
+pages="235--256",
+issn="1573-0565",
+doi="10.1023/A:1013689704352",
+url="https://doi.org/10.1023/A:1013689704352"
+}
+
+@Article{paclearning,
+author = "Nader H. Bshouty and Nadav Eiron and Eyal Kushilevitz",
+title = "{PAC} Learning with Nasty Noise",
+journal = "Theoret. Comput. Sci.",
+volume = "288",
+number = "2",
+year = "2002",
+pages = "255--275",
+note = "Special issue for ALT '99", 
+}
+
+@inproceedings{fogla,
+ author = {Fogla, Prahlad and Lee, Wenke},
+ title = {Evading Network Anomaly Detection Systems: Formal Reasoning and Practical Techniques},
+ booktitle = {Proceedings of the 13th ACM Conference on Computer and Communications Security},
+ series = {CCS '06},
+ year = {2006},
+ isbn = {1-59593-518-5},
+ location = {Alexandria, Virginia, USA},
+ pages = {59--68},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1180405.1180414},
+ doi = {10.1145/1180405.1180414},
+ acmid = {1180414},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {anomaly detection, mimicry attack, polymorphic blending attack}
+} 
+
+@inproceedings{globerson,
+ author = {Globerson, Amir and Roweis, Sam},
+ title = {Nightmare at Test Time: Robust Learning by Feature Deletion},
+ booktitle = {Proceedings of the 23rd International Conference on Machine Learning},
+ series = {ICML '06},
+ year = {2006},
+ isbn = {1-59593-383-2},
+ location = {Pittsburgh, Pennsylvania, USA},
+ pages = {353--360},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/1143844.1143889},
+ doi = {10.1145/1143844.1143889},
+ acmid = {1143889},
+ publisher = {ACM},
+ address = {New York, NY, USA}
+} 
+
+@incollection{nash,
+title = {Nash Equilibria of Static Prediction Games},
+author = {Michael Br\"{u}ckner and Tobias Scheffer},
+booktitle = {Advances in Neural Information Processing Systems 22},
+editor = {Y. Bengio and D. Schuurmans and J. D. Lafferty and C. K. I. Williams and A. Culotta},
+pages = {171--179},
+year = {2009},
+publisher = {Curran Associates, Inc.},
+url = {http://papers.nips.cc/paper/3755-nash-equilibria-of-static-prediction-games.pdf}
+}
+
+@InProceedings{wangstolfo,
+author="Wang, Ke
+and Stolfo, Salvatore J.",
+editor="Jonsson, Erland
+and Valdes, Alfonso
+and Almgren, Magnus",
+title="Anomalous Payload-Based Network Intrusion Detection",
+booktitle="Recent Advances in Intrusion Detection",
+year="2004",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="203--222",
+isbn="978-3-540-30143-1"
+}
+
+@InProceedings{wang2006,
+author="Wang, Ke
+and Parekh, Janak J.
+and Stolfo, Salvatore J.",
+editor="Zamboni, Diego
+and Kruegel, Christopher",
+title="Anagram: A Content Anomaly Detector Resistant to Mimicry Attack",
+booktitle="Recent Advances in Intrusion Detection",
+year="2006",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="226--248",isbn="978-3-540-39725-0"}
+
+@INPROCEEDINGS{brumley, 
+author={D. Brumley and J. Newsome and D. Song and Hao Wang and Somesh Jha}, 
+booktitle={2006 IEEE Symposium on Security and Privacy (S P'06)}, 
+title={Towards automatic generation of vulnerability-based signatures}, 
+year={2006}, 
+volume={}, 
+number={}, 
+pages={15 pp.-16}, 
+keywords={formal specification;security of data;computational complexity;constraint solving;data-flow analysis;formal definition;program semantics;security applications;vulnerability language;vulnerability signature;vulnerability-based signature automatic generation;Assembly;Computational complexity;Data analysis;Error analysis;Filtering;Humans;Manuals;Security;Space exploration;Testing}, 
+doi={10.1109/SP.2006.41}, 
+ISSN={1081-6011}, 
+month={May}}
+
+@inproceedings{dalvi,
+ author = {Dalvi, Nilesh and Domingos, Pedro and Mausam and Sanghai, Sumit and Verma, Deepak},
+ title = {Adversarial Classification},
+ booktitle = {Proceedings of the Tenth ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+ series = {KDD '04},
+ year = {2004},
+ isbn = {1-58113-888-1},
+ location = {Seattle, WA, USA},
+ pages = {99--108},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1014052.1014066},
+ doi = {10.1145/1014052.1014066},
+ acmid = {1014066},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {cost-sensitive learning, game theory, integer linear programming, naive Bayes, spam detection}
+ 
+} 
+
+@misc{wiki:Adversarial_machine_learning,
+   author = "Wikipedia",
+   title = "{Adversarial machine learning} --- {W}ikipedia{,} The Free Encyclopedia",
+   year = "2018",
+   howpublished = {\url{http://en.wikipedia.org/w/index.php?title=Adversarial\%20machine\%20learning&oldid=821367007}},
+   note = "[Online; accessed 25-January-2018]"
+}
+
+@book{chollet2017deep,
+  title={Deep Learning with Python},
+  author={Chollet, F.},
+  isbn={9781617294433},
+  url={https://books.google.it/books?id=Yo3CAQAACAAJ},
+  year={2017},
+  publisher={Manning Publications Company}
+}
+
+
 @misc{amazon:alexa,
   author = {{Amazon}},
   title = "Alexa",
